feat: Расчёт ГНПВ
